--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/Bootsrap-Site">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/Bootstrap-Site">Home</a>
                     </li>
                     <li class="nav-item  ">
-                        <a class="nav-link" href="/Bootsrap-Site/about.html">About</a>
+                        <a class="nav-link" href="/Bootstrap-Site/about.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
